<resources>
    <string name="app_name">Solar Seasons</string>
    <string name="appwidget_uv_text_description">UV value</string>
    <string name="appwidget_uv_text_default">0.0</string>
    <string name="app_widget_time_text_default">00:00</string>
    <string name="add_widget">Add widget</string>
    <string name="uv_value">%1$.1f</string>
    <string name="estimated_uv_value">Estimated Actual: %1$.1f</string>
    <string name="latest_update">Last updated: %1$s</string>
    <string name="max_uv">Expected Max: %1$.1f</string>
    <string name="max_uv_time">Time of max: %1$s</string>
    <string name="sun_progress_label">Sun Progress In Sky (Sunrise to Sunset)</string>
    <string name="sun_progress_label_shortened">Sun Progress In Sky</string>
    <string name="sun_info_list_title_label">Solar Times Today</string>
    <string name="sun_info_list_title_sub_label">(Tap each time for more info)</string>
    <string name="skin_exposure_label">Max Exposure Times</string>
    <string name="widget_background_image_description">Background colour based on UV level</string>
    <string name="sun_info_cell_image_description">Image representing the sun time</string>
    <string name="activity_settings_button_image_description">Image representing the app settings button</string>
    <string name="service_notification_title">Updating UV Information</string>
    <string name="service_notification_description">Getting location and retrieving new UV information</string>
    <string name="skin_type_cell_image_description">Image representing the skin color</string>
    <string name="exposure_time_hours_and_minutes">%1$s %2$s</string>
    <string name="exposure_time_max_hours">>24 hrs</string>
    <string name="exposure_time_hours">%dh</string>
    <string name="exposure_time_short_minutes">%dm</string>
    <string name="close_window">Close</string>
    <string name="button_settings_title">Settings</string>
    <string name="uv_forecast_label">UV Forecast</string>
    <string name="uv_forecast_now_time_label">Now</string>
    <string name="sun_info_description_not_found">Description not found</string>
    <string name="api_quota_exceeded_error">UV service quota exceeded. No more network requests available for today</string>
    <string name="api_key_invalid_error">API key is invalid, please check your settings</string>
    <string name="location_service_terminated">Location service destroyed</string>
    <string name="location_not_found">Could not find your location</string>
    <string name="location_manual_entry_error">Error using manual location. Check that all values exist</string>
    <string name="location_permission_any_denied">Location permission not granted</string>
    <string name="location_disabled_error">Location is disabled. Turn it on then try again</string>
    <string name="location_battery_saver_error">Background location is disabled due to battery saver mode</string>
    <string name="location_permission_fine_error">There is no previous location data on the device. A precise location permission is required to update this, otherwise use a different app that has such permission (such as a maps app)</string>
    <string name="location_permission_generic_rationale">Location permission is required in order to get the UV information at your position</string>
    <string name="location_permission_background_rationale">%1$s\n\nBackground location required for widget background updates. Go to location permissions in app settings and select the %2$s option</string>
    <string name="default_background_permission_option_label">relevant</string>
    <string name="notification_permission_rationale_title">Notification permission</string>
    <string name="notification_permission_rationale">Notification permission is required to send UV Protection notifications</string>
    <string name="activity_open_app_settings_text">Open App Settings</string>
    <string name="no_network_connection">Can\'t connect to the network</string>
    <string name="unknown_error">An unexpected error occurred, please try again</string>
    <string name="unknown_error_no_response">No response from the server, please try again</string>
    <string name="widget_error">UV data update had an error</string>
    <string name="activity_status_information_swipe_hint">Pull down to start a new request</string>
    <string name="uv_level_low">Low UV Rating</string>
    <string name="uv_level_moderate">Moderate UV Rating</string>
    <string name="uv_level_high">High UV Rating</string>
    <string name="uv_level_very_high">Very High UV Rating</string>
    <string name="uv_level_extreme">Extreme UV Rating</string>
    <string name="cloud_cover_none">No Clouds</string>
    <string name="cloud_cover_light">Light Cloud Cover</string>
    <string name="cloud_cover_moderate">Moderate Cloud Cover</string>
    <string name="cloud_cover_heavy">Heavy Cloud Cover</string>
    <string name="sun_info_solar_noon">Solar Noon</string>
    <string name="sun_info_solar_noon_description">During the solar noon, the sun is at its highest position in the daytime sky, resulting in the maximum UV exposure.</string>
    <string name="sun_info_nadir">Nadir</string>
    <string name="sun_info_nadir_description">During the nadir, the sun is at its lowest position below the earth, making it the darkest moment in the night.</string>
    <string name="sun_info_sunrise">Sunrise</string>
    <string name="sun_info_sunrise_description">Sunrise marks the moment when the top edge of sun is just visible on the horizon.</string>
    <string name="sun_info_sunset">Sunset</string>
    <string name="sun_info_sunset_description">Sunset marks the moment when the bottom edge of the sun begins to go below the horizon. At this point, the sun is slightly lower than Sunset Start time.</string>
    <string name="sun_info_sunrise_end">Sunrise Ends</string>
    <string name="sun_info_sunrise_end_description">The sunrise officially ends once the bottom edge of the sun touches the horizon, as the sun is going up.</string>
    <string name="sun_info_sunset_start">Sunset Starts</string>
    <string name="sun_info_sunset_start_description">Sunset technically starts the moment that the bottom edge of the sun touches the horizon, as it is going down.</string>
    <string name="sun_info_dawn">Dawn</string>
    <string name="sun_info_dawn_description">Dawn is the time from which the appearance of indirect sunlight can be observed.</string>
    <string name="sun_info_dusk">Dusk</string>
    <string name="sun_info_dusk_description">Dusk is the time when the sunset is ending just before night, with only indirect sunlight still visible.</string>
    <string name="sun_info_nautical_dawn">Nautical Dawn</string>
    <string name="sun_info_nautical_dawn_description">Nautical Dawn refers to the original definition observation of dawn by sailors. Whereas astronomical dawn occurs when the sun is 18 degrees below the horizon in the morning, nautical dawn is defined as the sun being 12 degrees below the horizon.</string>
    <string name="sun_info_nautical_dusk">Nautical Dusk</string>
    <string name="sun_info_nautical_dusk_description">Nautical Dusk refers to the original definition observation of dusk by sailors. Whereas astronomical dusk occurs when the sun is 18 degrees below the horizon in the evening, nautical dusk is defined as the sun being 12 degrees below the horizon.</string>
    <string name="sun_info_night_end">Night Ends</string>
    <string name="sun_info_night_end_description">This is the time when night officially ends, just before the dawn appears.</string>
    <string name="sun_info_night">Night</string>
    <string name="sun_info_night_description">This is the official time when the night starts and dusk has completely ended.</string>
    <string name="sun_info_golden_hour_end">Golden Hr Ends</string>
    <string name="sun_info_golden_hour_end_description">This is the time when the morning golden hour ends. Between dawn and this time is the best time for photography.</string>
    <string name="sun_info_golden_hour">Golden Hr Starts</string>
    <string name="sun_info_golden_hour_description">This is the time when the evening golden hour starts. After this time is the best for photography.</string>
    <string name="skin_type_1">Skin Type 1</string>
    <string name="skin_type_2">Skin Type 2</string>
    <string name="skin_type_3">Skin Type 3</string>
    <string name="skin_type_4">Skin Type 4</string>
    <string name="skin_type_5">Skin Type 5</string>
    <string name="skin_type_6">Skin Type 6</string>
    <string name="preference_app_theme_title">UV Display Theme</string>
    <string name="preference_work_type_title">Background Work Type Used</string>
    <string name="preference_cloud_cover_title">Calculate Cloud Effect on UV</string>
    <string name="preference_cloud_cover_summary">The app gets local weather data and uses cloud cover information to calculate an estimated actual UV level</string>
    <string name="preference_background_category_title">Widget Settings</string>
    <string name="preference_subscribe_screen_unlock_title">Retrieve UV Data on Screen Unlock</string>
    <string name="preference_subscribe_screen_unlock_summary">Updates UV data when the device is unlocked after the background refresh rate is exceeded</string>
    <string name="preference_app_launch_auto_request_title">Automatically Retrieve UV Data</string>
    <string name="preference_app_launch_auto_request_summary">The app makes a new UV data request each time it is opened if it has been longer than 10 minutes from the last request</string>
    <string name="preference_background_refresh_rate_title">Background Refresh Rate</string>
    <string name="preference_manual_location_category_title">Manual Location Settings</string>
    <string name="preference_enable_manual_location_title">Enable Manual Location</string>
    <string name="preference_manual_location_latitude_title">Latitude (decimal degrees)</string>
    <string name="preference_manual_location_longitude_title">Longitude (decimal degrees)</string>
    <string name="preference_manual_location_altitude_title">Altitude (metres)</string>
    <string name="preference_manual_location_latitude_error">Latitude value must be within -90.0 and +90.0</string>
    <string name="preference_manual_location_longitude_error">Longitude value must be within -180.0 and +180.0</string>
    <string name="preference_manual_location_altitude_error">Altitude value must be within 0 and 30000</string>
    <string name="preference_api_key_title">API Key</string>
    <string name="preferences_screen_no_widgets">No widgets detected, widget settings disabled</string>
    <string name="api_key_fragment_page_1_title">Welcome to Solar Seasons!</string>
    <string name="api_key_fragment_page_1_explanation">In order to begin using this app, an API key is required to connect to the UV data service\n\nThe basic tier API key is free, however, it only has enough daily requests for 1 user so each person must provide their own key\n\nThe next few screens will guide you through the process of getting your own API key\n\nOnly a Google
account is needed for authentication and you will not need to create a new password</string>
    <string name="api_key_fragment_page_2_3_4_title">First Time Setup</string>
    <string name="api_key_fragment_page_3_redirect_button_text">Open in browser app</string>
    <string name="api_key_fragment_swipe_hint">Swipe right to continue -></string>
    <string name="api_key_fragment_page_4_key_entry_placeholder">Enter your API key here</string>
    <string name="api_key_fragment_page_4_store_key_button_text">Save Key</string>
    <string name="api_key_fragment_page_4_key_added_success_text">API key stored. You can change it in the settings later if desired\n\nThe app is now ready to be used</string>
    <string name="api_key_fragment_page_4_launch_main_app_button_text">Go to App</string>
</resources>