<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="app_theme"
        app:title="@string/preference_app_theme_title"
        app:iconSpaceReserved="false"
        app:entries="@array/preferences_app_theme_entries"
        app:entryValues="@array/preferences_app_theme_values"
        app:useSimpleSummaryProvider="true"
        app:defaultValue="default_theme" />

    <SwitchPreferenceCompat
        app:key="app_launch_auto_request"
        app:title="@string/preference_app_launch_auto_request_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:summary="@string/preference_app_launch_auto_request_summary"
        app:defaultValue="true" />

    <SwitchPreferenceCompat
        app:key="cloud_cover_factor"
        app:title="@string/preference_cloud_cover_title"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:summary="@string/preference_cloud_cover_summary"
        app:defaultValue="false" />

    <SwitchPreferenceCompat
        app:key="uv_protection_notification"
        app:title="UV Protection Notification"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:summary="The app will send a push notification reminding you to apply sun protection when the UV exceeds 3.5."
        app:defaultValue="true" />

    <ListPreference
        app:key="uv_protection_notification_time"
        app:title="UV Protection Notification Time"
        app:entries="@array/preferences_uv_protection_time_option_entries"
        app:entryValues="@array/preferences_uv_protection_time_option_values"
        app:defaultValue="first_request"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"
        app:shouldDisableView="true"
        app:dependency="uv_protection_notification" />

    <EditTextPreference
        app:key="uv_protection_notification_custom_time"
        app:title="Notify Me At"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"
        app:shouldDisableView="true"
        app:dependency="uv_protection_notification" />

    <SwitchPreferenceCompat
        app:key="uv_protection_end_notification"
        app:title="UV Protection Ended Notification"
        app:singleLineTitle="false"
        app:iconSpaceReserved="false"
        app:summary="The app will send a push notification when the UV level returns to safe levels."
        app:defaultValue="true" />

    <PreferenceCategory
        app:key="manual_location_settings"
        app:title="@string/preference_manual_location_category_title"
        app:allowDividerAbove="false"
        app:isPreferenceVisible="false"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="enable_manual_location"
            app:title="@string/preference_enable_manual_location_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            app:defaultValue="false" />

        <EditTextPreference
            app:key="manual_location_latitude"
            app:title="@string/preference_manual_location_latitude_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="0.0"
            app:shouldDisableView="true"
            app:dependency="enable_manual_location" />

        <EditTextPreference
            app:key="manual_location_longitude"
            app:title="@string/preference_manual_location_longitude_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="0.0"
            app:shouldDisableView="true"
            app:dependency="enable_manual_location" />

        <EditTextPreference
            app:key="manual_location_altitude"
            app:title="@string/preference_manual_location_altitude_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="0"
            app:shouldDisableView="true"
            app:dependency="enable_manual_location" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="background_work_settings"
        app:title="@string/preference_background_category_title"
        app:singleLineTitle="false"
        app:allowDividerAbove="false"
        app:summary="@string/preferences_screen_no_widgets"
        app:iconSpaceReserved="false" >

        <SwitchPreferenceCompat
            app:key="subscribe_screen_unlock"
            app:title="@string/preference_subscribe_screen_unlock_title"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            app:summary="@string/preference_subscribe_screen_unlock_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="work_type"
            app:title="@string/preference_work_type_title"
            app:entries="@array/preferences_work_type_entries"
            app:entryValues="@array/preferences_work_type_values"
            app:defaultValue="one_time_work"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="background_refresh_rate"
            app:title="@string/preference_background_refresh_rate_title"
            app:entries="@array/preferences_background_refresh_rate_entries"
            app:entryValues="@array/preferences_background_refresh_rate_values"
            app:defaultValue="30"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="api_key_category"
        app:title="@string/preference_api_key_title"
        app:isPreferenceVisible="false"
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false" >

        <EditTextPreference
            app:key="stored_api_key"
            app:title="@string/preference_api_key_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>