<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apiKeySetup.APIKeyEntryFragment"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_key_fragment_page_2_3_4_title"
        android:textColor="?android:colorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/widget_text_large" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apiKeyEntryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apiKeyEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:elegantTextHeight="true"
            android:inputType="textNoSuggestions|text"
            android:hint="@string/api_key_fragment_page_4_key_entry_placeholder"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_key_fragment_page_4_store_key_button_text"
        android:textColor="?android:textColorPrimary"
        android:elegantTextHeight="true"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/apiKeyEntryLayout" />

    <TextView
        android:id="@+id/apiKeySuccessMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_key_fragment_page_4_key_added_success_text"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_below="@id/doneButton" />

    <Button
        android:id="@+id/launchAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/api_key_fragment_page_4_launch_main_app_button_text"
        android:textColor="@color/light_text"
        android:elegantTextHeight="true"
        android:textStyle="bold"
        android:backgroundTint="@color/ic_launcher_adaptive_background"
        android:drawableEnd="@mipmap/ic_launcher_adaptive_round"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/apiKeySuccessMessage" />

</RelativeLayout>