<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?android:windowBackground"
    tools:context=".apiKeySetup.APITutorialPageFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/api_key_fragment_page_1_title"
        android:textColor="?android:colorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/widget_text_large" />

    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:textAlignment="center"
        android:textSize="@dimen/text_default"
        tools:text="@string/api_key_fragment_page_1_explanation"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_centerVertical="true" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/api_fragment_web_view_height"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/apiKeyRedirectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="?android:textColorSecondary"
        android:textStyle="bold"
        android:elegantTextHeight="true"
        android:layout_centerHorizontal="true"
        android:text="@string/api_key_fragment_page_3_redirect_button_text"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_below="@id/webView" />

    <TextView
        android:id="@+id/swipeHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:text="@string/api_key_fragment_swipe_hint"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>